--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.java-mail-1.4.4.jar=C:\\Users\\MODERN\\Downloads\\java-mail-1.4.4.jar
 file.reference.jBCrypt-0.4.jar=C:\\Users\\MODERN\\Downloads\\jBCrypt-0.4.jar
 file.reference.mysql-connector.jar=C:\\Users\\MODERN\\Downloads\\mysql-connector.jar
 includes=**
@@ -40,7 +41,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector.jar}:\
-    ${file.reference.jBCrypt-0.4.jar}
+    ${file.reference.jBCrypt-0.4.jar}:\
+    ${file.reference.java-mail-1.4.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
